# rrt_star_turtlebot

./: CMakeLists.txt  README.md  package.xml  polecenia
launch/: colloseum.launch  rrt_vertices.launch
maps/: map_medium.yaml  map_room.pgm  map_room.yaml
rviz/: pathplanning_rrt.rviz  turtlebot3_waffle_demo_rrt.rviz
src/: controller.py  grid_map.py  path.txt  points.py  rrt_star.py
