<?xml version="1.0"?>
<package format="2">
  <name>rrt_miapr</name>
  <version>0.7.0</version>
  <description>RRT* turtlebot.</description>
  <maintainer email="marcinpiechotax@gmail.com">Marcin Piechota</maintainer>
  <license>BSD</license>
  <url type="website">http://lrm.put.poznan.pl</url>
  <url type="bugtracker">http://lrm.put.poznan.pl</url>
  <author email="marcinpiechotax@gmail.com">Marcin Piechota</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>rviz</depend>
  <build_depend>map_server</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
